--- a/.github/workflows/data-pipeline.yml
+++ b/.github/workflows/data-pipeline.yml
@@ -33,5 +33,5 @@ jobs:
       - name: Commit and push if changes
         if: env.changes == 'true' # if changes made push new data to repo
         run: |
-          git commit -m "updated video index"
+          git commit -m "data updated"
           git push
