--- a/.github/workflows/data-pipeline.yml
+++ b/.github/workflows/data-pipeline.yml
@@ -3,7 +3,9 @@ name: data-pipeline-workflow
 on:
   # push: # uncomment to run on push
   schedule:
-    - cron: "35 0 * * *" # run every day at 12:35AM
+    - cron: "15 12 * * *"
+    - cron: "15 18 * * *"
+    - cron: "15 0  * * *"
   workflow_dispatch:  # manual triggers
 
 jobs:
